--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -2,7 +2,7 @@ Source: envirophat
 Maintainer: Phil Howard <phil@pimoroni.com>
 Homepage: https://github.com/pimoroni/enviro-phat
 Section: python
-Priority: optional
+Priority: extra
 Build-Depends: debhelper (>= 9.0.0), dh-python, python-all (>= 2.7), python-setuptools, python3-all (>= 3.4), python3-setuptools
 Standards-Version: 3.9.6
 X-Python-Version: >= 2.7
